thx2_results/results/metropolis/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -DUSE_GPU -DUSE_GPU -O3 -O3 -O3 -O3 -c main.cpp -o main.o
In file included from main.cpp:30:
./kernel_metropolis.h:160:9: warning: use of bitwise '|' with boolean operands [-Wbitwise-instead-of-logical]
  160 |     c = sycl::signbit(dh - EPSILON) |
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                     ||
  161 |         sycl::signbit(gpu_rand01(&lstate, &linc) - sycl::exp(dh * B));
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./kernel_metropolis.h:160:9: note: cast one or both operands to int to silence this warning
./kernel_metropolis.h:172:9: warning: use of bitwise '|' with boolean operands [-Wbitwise-instead-of-logical]
  172 |     c = sycl::signbit(dh - EPSILON) |
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                     ||
  173 |         sycl::signbit(gpu_rand01(&lstate, &linc) - sycl::exp(dh * B));
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./kernel_metropolis.h:172:9: note: cast one or both operands to int to silence this warning
In file included from main.cpp:31:
./kernel_reduction.h:31:15: error: no member named 'shuffle_down' in 'sycl::sub_group'
   31 |     val += sg.shuffle_down(val, offset);
      |            ~~ ^
main.cpp:262:40: warning: 'get_pointer' is deprecated: local_accessor::get_pointer() is deprecated, please use get_multi_ptr() [-Wdeprecated-declarations]
  262 |                                 ss_acc.get_pointer());
      |                                        ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/accessor.hpp:2565:3: note: 'get_pointer' has been explicitly marked deprecated here
 2565 |   __SYCL2020_DEPRECATED(
      |   ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
main.cpp:282:40: warning: 'get_pointer' is deprecated: local_accessor::get_pointer() is deprecated, please use get_multi_ptr() [-Wdeprecated-declarations]
  282 |                                 ss_acc.get_pointer());
      |                                        ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/accessor.hpp:2565:3: note: 'get_pointer' has been explicitly marked deprecated here
 2565 |   __SYCL2020_DEPRECATED(
      |   ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
main.cpp:313:48: warning: 'get_pointer' is deprecated: local_accessor::get_pointer() is deprecated, please use get_multi_ptr() [-Wdeprecated-declarations]
  313 |                                     shared_acc.get_pointer());
      |                                                ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/accessor.hpp:2565:3: note: 'get_pointer' has been explicitly marked deprecated here
 2565 |   __SYCL2020_DEPRECATED(
      |   ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
5 warnings and 1 error generated.
make: *** [Makefile:71: main.o] Error 1
